# foodflow-bot

./: .env  .env.example.bak  .gitignore  API.md  API_DOCUMENTATION.md  ARCHITECTURE_ANALYSIS.md  FatSecret_Complete_Guide.md  FoodFlow_Menu_Guidelines.txt  LICENSE  README.md  SECURITY_REPORT.md  SHOPPING_MODE_PLAN.md  TESTING_PLAN.md  analyze_ocr_results.py  audit_db.py  check_model.py  config.py  daily_nutrition_report.py  debug_auth.py  diagnose.py  draft_announcements.md  eat_handler_snippet.py  ecosystem.config.js  find_all_olgas.py  find_busy_curators.py  find_julia.py  find_olga.py  fix_f1_servings.py  fix_modal.py  foodflow.db  foodflow.db-shm  foodflow.db-wal  foodflow.db.bak_pre_marathon_v2  foodflow.db.bak_user_enrichment  gemini.md  healthcheck.py  herbalife_db.json  herbalife_db_v2.json  igor_logs_backup_20260421_110635.json  inspect_db_schema.py  (+28 more)
FoodFlow/: config.py  main.py  requirements.txt
api/: auth.py  dependencies.py  main.py  schemas.py
backup/: CHATUMBA_KNOWLEDGE_FULL_v2.txt  foodflow_frontend_concept_ai.README.md
content_factory/: README.md  artifacts.py  daemon.py  editorial.py  http_client.py  main.py  notify.py  situations.py  state.json  state.py  stylist.py  vk_stylist.py
data/: march_8_ai_gifts.json  march_8_ai_gifts_final.json  march_8_ai_gifts_v2.json  march_8_stats.json
database/: __init__.py  base.py  migrations.py  models.py
dream_bot/: config.py  main.py  test_ai.py  test_ai_structure.py  test_ai_usage.py
frontend/: foodflow  herbalife_expert_reference.py  index.html  package-lock.json  package.json  vite.config.ts
handlers/: __init__.py  admin.py  auth.py  base.py  common.py  correction.py  curator.py  curator.py.bak_full_logs  errors.py  errors.py.bak  feedback.py  fridge.py  fridge_search.py  global_input.py  guide.py  herbalife.py  i_ate.py  marketing.py  menu.py  onboarding.py  payments.py  pilot_commands.py  receipt.py  recipes.py  referrals.py  saved_dishes.py  shopping.py  shopping_list.py  stats.py  subscription.py  support.py  survey.py  testers.py  universal_input.py  user_settings.py  ward_interactions.py  water.py  weight.py
landing/: foodflow  hello.html  index.html  privacy.html  script.js  styles.css  terms.html
middleware/: admin_logger.py  paywall.py  user_enrichment.py
monitoring/: __init__.py  health.py
plans/: roadmap_v1.md
scratch/: bot_logs_dump.txt  check_yesterday_stats.py  onboarding_analysis.py  test_calc.py  web_user_analysis.py  yesterday_analysis.py
scripts/: add_odrinskaya_report.py  analyze_user_data.py  audit_db.py  audit_weights.py  autobackup.py  backfill_fiber.py  backfill_fridge_base_names.py  broadcast_apology.py  broadcast_beta_testers.py  broadcast_logic_update.py  broadcast_mega_update.py  broadcast_pioneer.py  broadcast_update.py  broadcast_web.py  check_blockers.py  check_bot_method.py  check_feedback.py  create_and_verify_user.py  debug_db_check.py  debug_elena_data.py  debug_unverified_users.py  debug_user.py  debug_user_status.py  diag_weight.py  downgrade_user.py  enrich_users.py  extract_user_stats.py  find_admin.py  find_channel_id.py  find_female_users.py  find_user.py  fix_missing_keyboards.py  fix_verification.py  force_keyboard.py  generate_ai_gifts.py  generate_yellow_reports.py  get_user_info.py  gift_user.py  grant_access_manual.py  grant_launch_pro.py  (+58 more)
services/: ai.py  ai_brain.py  ai_guide.py  ai_insight.py  cache.py  consultant.py  curator_analytics.py  (+22 more)
(+659 files in other folders)
