[project]
name = "foodflow-bot"
version = "0.1.0"
description = "Smart AI-powered Telegram bot for intelligent food management"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".specify",
    "*.egg-info",
    "dist",
    "build",
    "eat_handler_snippet.py",  # Snippet file, not main code
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize Python syntax)
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"*.py" = ["E402"]  # Allow imports not at top of file (for some cases)

[tool.ruff.lint.isort]
known-first-party = ["handlers", "services", "database"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "aioresponses>=0.7.4",
    "pytest-cov>=4.1.0",
]


